--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.USE_EXACT_ALARM"
         tools:ignore="ExactAlarm" />
     <application
-        android:label="to_do_list"
+        android:label="To Do List"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
